#63 - 14.3 now breaks extra optimisations so swapping out for actual impls where possible ~cut-release